home.css
body {
    background-color: aqua;
    background-image: url(assets/bg-1080.jpg) !important;
    flex-direction: row;
}
@media screen and (min-height: 1440px) {
    body {
      background-image: url(assets/bg-1440.jpg) !important;
    }
}
@media screen and (min-height: 3840px) {
    body {
      background-image: url(assets/bg-4k.jpg) !important;
    }
}
@media (max-aspect-ratio: 1/1) {
    body {
        background-image: url(assets/bg-mobile.jpg) !important;
    }
}

.left {
    left: 2%;
}
.right {
    right: 2%;
}
.top {
    top: 2%;
}
.bottom {
    bottom: 2%;
}

div.button {
    position: fixed;
    background-image: url("assets/buttonBlack.png");
    background-size: 100%;
    background-position: center;
    padding: 3%;
    font-size: 2vw;
}
div.button:hover {
    background-image: url("assets/buttonYellow.png");
    color: #181818;
    transition: 0.2s;
}

.icon-wrapper {
    text-align: center;
    width: 100%;
    position: fixed;
    top: 3%;
    animation-name: fade;
    animation-duration: 1s;
    animation-timing-function: ease;
}
.icon {
    display: inline;
    width: 40px;
    height: 40px;
    padding: 0px 12px 0px 12px;
}

